[package]
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"
name = "l-system"
version = "0.1.0"

[features]
default = []
web-sys-context = ["web-sys", "wasm-bindgen"]

[dependencies]
serde = "1.0.123"
serde_json = "1.0.62"
web-sys = { version = "0.3.47", features = ["CanvasRenderingContext2d"], optional = true }
wasm-bindgen = { version = "0.2.70", optional = true }

[workspace]
members = [
    "examples/web-turtle/../web-turtle/"
]
