[package]
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"
name = "web-turtle"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3.47", features = ["console", "CanvasRenderingContext2d", "Document", "Window", "HtmlCanvasElement", "Element", "HtmlElement", "Node"] }
wasm-bindgen = { version = "0.2.70" }
l-system = { path = "../..", features=["web-sys-context"] }
